# babylon

./: .actrc  .continuerc.json  .continuerules  .editorconfig  .env.example  .gitattributes  .gitignore  .gitignore.orig  .gitleaks.toml  .gitmodules  .markdownlint.yaml  .markdownlintignore  .mdformat.toml  .mise.toml  .pre-commit-config.yaml  .semgrep.yml  .tflint.hcl  .trivyignore  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONSTITUTION.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEBT.md  E2E_SUMMARY.md  GEMINI.md  NORTH_STAR.md  README.md  SETUP_GUIDE.md  TODO.md  _pyproject.toml  ast_usages.txt  babylon.code-workspace  config.toml  contradiction.py  data-artifacts.yaml  data-catalog.yaml  (+17 more)
.agents/: agents.md
.claude/: settings.json
.design-sync/: NOTES.md  config.json  conventions.md  ds-tailwind-entry.css  fonts.css  nerd-fonts.css  tsconfig.esbuild.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.opencode/: goal.md
.serena/: project.yml
.specify/: init-options.json
.understand-anything/: .understandignore  domain-graph.json  fingerprints.json  knowledge-graph.json  meta.json
ai/: README.md  anti-patterns.yaml  architecture.yaml  carceral-equilibrium.yaml  class-dynamics.yaml  database-spec.yaml  design-system.yaml  documentation-standards.yaml  entities.yaml  exceptions-architecture.yaml  formulas-spec.yaml  game-loop-architecture.yaml  graph-abstraction-spec.yaml  imperial-rent-spec.yaml  mantras.yaml  marxian-tensor-spec.yaml  ontology.yaml  patterns.yaml  pydantic-patterns.yaml  shadow-labor-spec.yaml  state-ai-algorithm.yaml  state.yaml  terminal-crisis.yaml  theory.yaml  tooling.yaml  topology-system.yaml  tuning-standard.yaml  wiring-doctrine.md
ai-docs/: README.md  agency-layer.yaml  anti-patterns.yaml  architecture.yaml  asyncio-patterns.yaml  balance-targets.yaml  balance-tuning.yaml  balkanization-spec.yaml  carceral-equilibrium.md  carceral-equilibrium.yaml  carceral-geography.yaml  census-insights.yaml  ci-workflow.yaml  cohesion-mechanic.yaml  database-spec.yaml  decisions.yaml  demographics-spec.yaml  demographics.yaml  demographics_and_mortality.md  design-system.yaml  doctrine-tree-mvp.yaml  documentation-standards.yaml  echarts-patterns.yaml  entities.yaml  epoch-readiness-review.yaml  epoch2-persistence.yaml  epochs-overview.md  error-recovery-spec.yaml  exceptions-architecture.yaml  fog-of-war.yaml  formulas-spec.yaml  fred-api.yaml  game-loop-architecture.yaml  gramscian-wire-mvp.yaml  gramscian-wire-vision.yaml  graph-abstraction-spec.yaml  imperial-circuit.yaml  imperial-rent-spec.yaml  jsoneditor-patterns.yaml  kinetic-warfare.yaml  (+38 more)
antigravity-babylon/: README.md
brainstorm/: README.md  babylon-protocol-verification.md  branch-protection-setup.md  ci-best-practices-bd-model.md  data-requirements.md  deferred-ideas.md  gramscian-wiki-engine.md  metrics-collector-audit-reasoning.md  minimum-playable-slice.md  music-system-redesign.md  on-ai-assisted-development.md  rag-input-validation.md  refactor-social-class.md  reproductive-labor-theory.md  synopticon-concept.md  vibe-coding-manifesto.md  warlord-trajectory.md
config/: logging_config.py
config-examples/: config.toml.example  credentials.example
content/: _index.md
data/: .gitkeep
datagaps/: babylon-data-investigation-guide.md  babylon-tensor-endstate.md
deploy/: .gitignore  HOW-TO-DEPLOY-HETZNER.md  README.md  requirements.yml
docs/: .gitignore  043_frontend_mock_wiring_audit.md  043_wiring_verification_report.md  AESTHETICS.md  AI_COMMS.md  CHANGELOG.md  CHARACTER_DESIGN.md  CHROMA.md  CONFIGURATION.md  CONTEXT_WINDOW.md  CONTRADICTION_ENGINE.md  DATABASE_SCHEMA.md  ECONOMY.md  EMBEDDINGS_IMPLEMENTATION.md  ERROR_CODES.md  GUI_PLAN.md  IDEAS.md  IMPROVEMENTS.md  LOGGING.md  MECHANICS.md  Makefile  NARRATIVE_CONTENT.md  OBJECT_TRACKING.md  README.md  SEMANTIC_VERSIONING_SPECIFICATION.md  STORY.md  TODO.md  TROUBLESHOOTING.md  VECTOR_DB.md  adr094-gates.md  chroma-troubleshooting.md  conf.py  docs-pdf-index.rst  documents-TODO.md  gameplay_ideas.md  index.rst  kanban.md  puppeteer-config.json  versioning.md
examples/: embeddings_demo.py  rag_example.py
hypergraph-rs/: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
hypergraph-rs/crates/hypergraph-rs/: Cargo.toml
hypergraph-rs/crates/hypergraph-rs-cli/: Cargo.toml
hypergraph-rs/crates/hypergraph-rs-cli/src/: main.rs
hypergraph-rs/crates/hypergraph-rs-python/: Cargo.toml
hypergraph-rs/crates/hypergraph-rs-python/src/: lib.rs
hypergraph-rs/crates/hypergraph-rs-wasm/: Cargo.toml
hypergraph-rs/crates/hypergraph-rs-wasm/src/: lib.rs
hypergraph-rs/crates/hypergraph-rs/conformance/: generate_fixtures.py  xgi_ground_truth.json
hypergraph-rs/crates/hypergraph-rs/src/: lib.rs
hypergraph-rs/crates/hypergraph-rs/src/core/: dihypergraph.rs  error.rs  hypergraph.rs  kinds.rs  mod.rs  simplicialcomplex.rs
hypergraph-rs/crates/hypergraph-rs/tests/conformance/: main.rs
hypergraph-rs/crates/hypergraph-rs/tests/core/: main.rs  test_dihypergraph.rs  test_hypergraph.rs  test_simplicialcomplex.rs
hypergraph-rs/tests/core/: test_hypergraph.rs
output/: README.md
project/: 00-mission.md  01-state-of-the-world.md  02-engine-truths.md  03-next-spec-071.md  05-catalog-execution.md  06-lawverian-dialectics.md  06a-phase-c2-design.md  06b-phase-d-design.md  06c-phase-e-design.md  07-chat-corpus-alignment.md  08-graph-substrate.md  09-program-full-game.md  HOLISTIC_REVIEW-2026-07-07.md  POST_ASSESSMENT.md  README.md  REMEDIATION_PLAN.md  _HANDOFF.md  _PROGRESS.md  c17-test-migration-ledger.md  owner-queue.md  roadmap.md
reports/: aidocs-vs-code-audit-2026-05-16.md  amputation_20260717_001523.md  amputation_demotion_20260717_011045.md  audit_latest.md  audit_report.md  bundle-2-baseline-test-int-tally.txt  bundle-2-baseline-test-tally.txt  bundle-2-baseline-test-unit-tally.txt  bundle-2-orphan-schemas.txt  data-constitution-catalog-sentinel-brief.md  data-constitution-triage-2026-07-16.md  data-constitution-wealth-axis-brief.md  full_audit.md  (+28 more)
(+6055 files in other folders)
