[tool.poetry]
name = "babylon"
version = "0.3.0"
description = "A Marxist text-based role playing game powered by Claude. It aims to educate and entertain by turning the immortal science of dialectical materialism into a game engine."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    "Persephone Raskova <percy@babylonrpg.com>",
]
keywords = [
    "ai",
    "llm",
    "marxism",
    "rpg",
    "dystopian",
]
packages = [
    { include = "babylon", from = "src" },
]

[tool.poetry.urls]
Homepage = "https://babylonrpg.com"
Documentation = "https://github.com/bogdanscarwash/babylon#readme"
Issues = "https://github.com/bogdanscarwash/babylon/issues"
Source = "https://github.com/bogdanscarwash/babylon"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.10.3"
numpy = ">=1.26.4"
networkx = ">=3.2.1"
sqlalchemy = ">=2.0.36"
typer = ">=0.15.1"
rich = ">=13.9.4"
coloredlogs = ">=15.0.1"
pandas = ">=2.2.3"
pyyaml = ">=6.0.2"
python-dotenv = ">=1.0.1"
chromadb = ">=1.0.0"
tokenizers = ">=0.19.1"
backoff = ">=2.2.1"
requests = ">=2.32.3"
certifi = ">=2025.11.12"
ratelimit = ">=2.2.1"
psutil = ">=7.1.0"
gputil = "==1.4.0"
jsonschema = "^4.25.1"
referencing = "^0.37.0"
aiohttp = "^3.13.2"
openai = "^2.9.0"
filelock = ">=3.20.1"
dearpygui = "^2.1.1"
salib = "^1.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
mypy = "^1.13.0"
ruff = "^0.14.0"
pre-commit = "^4.0.0"
commitizen = "^4.1.0"
types-jsonschema = "^4.25.1.20251009"
types-pyyaml = "^6.0.12.20250915"
types-networkx = "^3.6.0.20251127"
types-ratelimit = "^2.2.0.20250501"
midiutil = "^1.2.1"
markdownify = "^1.2.2"
yamllint = "^1.37.1"
mido = "^1.3.3"
linkify-it-py = "^2.0.3"
pip-audit = "^2.7.3"
pytest-playwright = "^0.7.2"
radon = "^6.0.1"
xenon = "^0.9.3"
pytest-randomly = "^4.0.1"
mutmut = "^3.4.0"
optuna = "^3.6"
optuna-dashboard = "^0.15"
scipy = ">=1.11.0"
SALib = ">=1.4.7"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7,<9"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "<3.6"
myst-parser = "^4.0.1"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-mermaid = "^1.2"

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
norecursedirs = [
    "mutants",
    ".mutmut-cache",
    "html",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
markers = [
    "unit: Fast unit tests for isolated components (no I/O, no AI)",
    "math: Deterministic mathematical formulas (fast, pure functions)",
    "ledger: Economic/Political state tests (fast, deterministic)",
    "topology: Graph/Network operations (fast, deterministic)",
    "integration: Database/ChromaDB tests (medium, I/O bound)",
    "ai: AI/RAG evaluation tests (slow, non-deterministic)",
    "red_phase: TDD RED phase tests (intentionally failing until GREEN phase)",
    "slow: Long-running scenario tests (2000+ ticks, multi-minute runtime)",
    "theory_rent: Imperial rent and unequal exchange mechanics",
    "theory_rift: Metabolic rift and ecological limits mechanics",
    "theory_solidarity: Solidarity transmission and consciousness mechanics",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "src",
]
exclude = [
    "assets/music/",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "C90",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = [
    "babylon",
]

[tool.ruff.lint.per-file-ignores]
# Tests use fixtures for side-effects (cleanup, module state reset)
"tests/**" = ["ARG001", "ARG002"]
# Tools are data generators/scripts, complexity limits don't apply
"tools/**" = ["C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    "assets/music/",
]
plugins = [
    "pydantic.mypy",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.mutmut]
paths_to_mutate = [
    "src/babylon/systems/formulas.py",
    "src/babylon/engine/systems/economic.py",
    "src/babylon/engine/systems/survival.py",
]
tests_dir = [
    "tests/unit/",
]
also_copy = [
    "src/",
    "tools/",
]
debug = false

[tool.babylon.logging]
default_level = "INFO"
console_level = "INFO"
file_level = "DEBUG"

[tool.babylon.logging.modules]
"babylon.engine" = "INFO"
"babylon.engine.systems" = "INFO"
"babylon.engine.simulation" = "INFO"
"babylon.rag" = "INFO"
"babylon.rag.retrieval" = "INFO"
"babylon.rag.embeddings" = "INFO"
"babylon.rag.chunker" = "INFO"
"babylon.data" = "INFO"
"babylon.data.chroma_manager" = "INFO"
chromadb = "WARNING"
httpx = "WARNING"
httpcore = "WARNING"
urllib3 = "WARNING"
asyncio = "WARNING"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"
