[tool.poetry]
name = "babylon"
version = "0.3.0"
description = "A Marxist text-based role playing game powered by Claude. It aims to educate and entertain by turning the immortal science of dialectical materialism into a game engine."
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    "Persephone Raskova <percy@babylonrpg.com>",
]
keywords = [
    "ai",
    "llm",
    "marxism",
    "rpg",
    "dystopian",
]
packages = [
    { include = "babylon", from = "src" },
    # babylon_data: thin Python wrapper around the data trove at
    # /media/user/data/babylon-data/. src/babylon_data is a symlink to that
    # path (committed in git). Restored from commit 4ce7c96a^ in the
    # post-Spec-059 skip-remediation pass. See ADR-037.
    { include = "babylon_data", from = "src" },
]

[tool.poetry.urls]
Homepage = "https://babylonrpg.com"
Documentation = "https://github.com/bogdanscarwash/babylon#readme"
Issues = "https://github.com/bogdanscarwash/babylon/issues"
Source = "https://github.com/bogdanscarwash/babylon"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2.10.3"
numpy = ">=1.26.4"
networkx = ">=3.2.1"
sqlalchemy = ">=2.0.36"
pandas = ">=2.2.3"
jsonschema = "^4.25.1"
referencing = "^0.37.0"
openpyxl = "^3.1.5"
openai = "^2.9.0"
tokenizers = ">=0.19.1"
aiohttp = "^3.13.3"
backoff = ">=2.2.1"
ratelimit = ">=2.2.1"
typer = ">=0.15.1"
rich = ">=13.9.4"
coloredlogs = ">=15.0.1"
# PyQt6, PyQt6-WebEngine, pydeck removed in Spec 059 follow-up
# (commit chore(ui): delete PyQt6 dashboard) — desktop dashboard at
# src/babylon/ui/dashboard/ deleted; live UI stack is Django + React
# (mise run web:dev) at web/ + frontend/.
h3 = "^4.2"
geopandas = ">=1.0.0"
pyproj = ">=3.6.0"
shapely = ">=2.0.0"
pyyaml = ">=6.0.2"
python-dotenv = ">=1.0.1"
requests = ">=2.32.3"
certifi = ">=2025.11.12"
filelock = ">=3.20.3"
scipy = ">=1.11.0"
xgi = "^0.10"
rstcheck = "^6.2.5"
doc8 = "^2.0.0"
polars = "^1.38.1"
psycopg = "^3.3.3"
psycopg-pool = "^3.3.0"
pyarrow = "^23.0.1"
boto3 = "^1.42.59"
duckdb = "^1.4.4"
pgvector = "^0.4"
ansible-dev-tools = "^26.2.0"
uuid = "^1.30"
django = ">=5.0,<6.0"
djangorestframework = ">=3.15"
django-cors-headers = ">=4.0"
gunicorn = ">=21.0"
sentence-transformers = "^3.0"
tqdm = "^4.66"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-mock = "^3.14.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
mypy = "^1.13.0"
ruff = "^0.15.12"
pre-commit = "^4.0.0"
commitizen = "^4.1.0"
types-jsonschema = "^4.25.1.20251009"
types-pyyaml = "^6.0.12.20250915"
types-networkx = "^3.6.0.20251127"
types-ratelimit = "^2.2.0.20250501"
midiutil = "^1.2.1"
markdownify = "^1.2.2"
yamllint = "^1.37.1"
mido = "^1.3.3"
linkify-it-py = "^2.0.3"
pip-audit = "^2.7.3"
pytest-playwright = "^0.7.2"
# pytest-qt removed with the PyQt6 dashboard cleanup
radon = "^6.0.1"
xenon = "^0.9.3"
pytest-randomly = "^4.0.1"
mutmut = "^3.4.0"
deptry = "^0.25.1"
salib = "^1.5.2"
optuna = "^3.6"
optuna-dashboard = "^0.20"
types-docutils = "^0.22.3.20251115"
types-tqdm = "^4.67.0.20250809"
vulture = "^2.14"
hypothesis = "^6.149.0"
pytest-django = "^4.8"
django-stubs = {version = ">=5.0", extras = ["compatible-mypy"]}
djangorestframework-stubs = {version = ">=3.15", extras = ["compatible-mypy"]}
testcontainers = {extras = ["postgres"], version = "^4.14.2"}
pytest-json-report = "^1.5.0"
pytest-html = "^4.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7,<9"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "<3.6"
myst-parser = "^5.0.0"
sphinx-autobuild = "^2024.10.3"
sphinxcontrib-mermaid = "^2.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "babylon_web.settings.testing"
pythonpath = [
    "src",
    "web",
]
testpaths = [
    "tests",
]
norecursedirs = [
    "mutants",
    ".mutmut-cache",
    "html",
    ".hypothesis",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]
markers = [
    "unit: Fast unit tests for isolated components (no I/O, no AI)",
    "math: Deterministic mathematical formulas (fast, pure functions)",
    "ledger: Economic/Political state tests (fast, deterministic)",
    "topology: Graph/Network operations (fast, deterministic)",
    "integration: Database/ChromaDB tests (medium, I/O bound)",
    "ai: AI/RAG evaluation tests (slow, non-deterministic)",
    "red_phase: TDD RED phase tests (intentionally failing until GREEN phase)",
    "slow: Long-running scenario tests (2000+ ticks, multi-minute runtime)",
    "scenario: Full simulation scenario tests (multi-tick arcs, state verification)",
    "theory_rent: Imperial rent and unequal exchange mechanics",
    "theory_rift: Metabolic rift and ecological limits mechanics",
    "theory_solidarity: Solidarity transmission and consciousness mechanics",
    "property: Property-based tests using Hypothesis",
    "theory: Marxian theory validation tests (Capital Volume 2 reproduction schema)",
    "empirical: Empirical validation tests requiring real QCEW data (deselect with '-m \"not empirical\"')",
    "benchmark: Performance and memory benchmarks for tensor operations",
    "requires_postgres: Tests requiring a running PostgreSQL instance (skipped if unavailable)",
    "postgres: Tests using testcontainers ephemeral PostgreSQL (requires Docker)",
    "invariant: Marx value-form & software metamorphic invariant tests (spec-060)",
    "cross_scale: marks tests for spec 062 cross-scale integration",
]
addopts = [
    "-v",                      # Verbose output (already have)
    "--tb=short",              # Short traceback format (already have)
    "--strict-markers",        # Enforce marker registration (already have)
    "--strict-config",         # Enforce config correctness (already have)
    "-ra",                     # Show summary of all test outcomes (already have)

    # Performance
    "--durations=10",          # Show 10 slowest tests

    # Coverage (when running with --cov)
    "--cov-report=term-missing",  # Show lines missing coverage
    "--cov-report=html",          # Generate HTML coverage report

    # Output control
    "--color=yes",             # Force colored output

    # Debugging aids
    "-l",                      # Show locals (shorter alias)

]

# JUnit XML reporting (no-ops unless --junit-xml is passed; the test:* mise
# tasks pass --junit-xml=reports/test-results/<task>/junit.xml).
# Verbose, machine-readable defaults for AI-agent consumption.
junit_suite_name = "babylon"
junit_family = "xunit2"            # Modern schema with richer per-testcase metadata
junit_logging = "all"              # Embed stdout, stderr, AND log records into the XML
junit_log_passing_tests = true     # Capture logs even for passing tests
junit_duration_report = "call"     # Test-call duration only (excludes setup/teardown noise)

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "src",
    "web",
]
exclude = [
    "assets/music/",
    "specs/",
    "web/frontend/",
]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "C90",
    "UP",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = [
    "babylon",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001",
    "ARG002",
]
"web/**" = [
    "ARG001",
]
"tools/**" = [
    "C901",
    "SIM",
]
"scripts/**" = [
    "C901",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src:web"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "tests/",
    "build/",
    "dist/",
    "assets/music/",
    "specs/",
    "src/babylon_data/",
]
plugins = [
    "pydantic.mypy",
    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "h3",
    "h3.*",
    "tomli",
    "pgvector.*",
    "gunicorn.*",
    "corsheaders.*",
]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "babylon_web.settings.development"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true

[tool.mutmut]
paths_to_mutate = [
    "src/babylon/formulas/fundamental_theorem.py",
    "src/babylon/formulas/survival_calculus.py",
    "src/babylon/formulas/unequal_exchange.py",
    "src/babylon/formulas/dynamic_balance.py",
    "src/babylon/formulas/ideological_routing.py",
    "src/babylon/formulas/solidarity.py",
    "src/babylon/formulas/metabolic_rift.py",
    "src/babylon/formulas/vitality.py",
    "src/babylon/formulas/trpf.py",
    "src/babylon/formulas/class_dynamics.py",
    "src/babylon/engine/systems/economic.py",
    "src/babylon/engine/systems/struggle.py",
    "src/babylon/engine/systems/territory.py",
    "src/babylon/engine/systems/solidarity.py",
    "src/babylon/engine/systems/ideology.py",
    "src/babylon/engine/systems/survival.py",
    "src/babylon/engine/systems/vitality.py",
    "src/babylon/engine/systems/production.py",
    "src/babylon/engine/systems/control_ratio.py",
    "src/babylon/engine/systems/decomposition.py",
    "src/babylon/engine/systems/metabolism.py",
    "src/babylon/engine/systems/contradiction.py",
    "src/babylon/engine/systems/event_template.py",
    "src/babylon/economics/tensor.py",
    "src/babylon/economics/capital_stock.py",
    "src/babylon/economics/reproduction.py",
    "src/babylon/economics/depreciation.py",
    "src/babylon/economics/derived_metrics.py",
    "src/babylon/economics/shadow_labor.py",
    "src/babylon/economics/department_mapper.py",
    "src/babylon/economics/snlt.py",
    "src/babylon/economics/tensor_registry.py",
    "src/babylon/economics/hydrator.py",
    "src/babylon/economics/melt/melt_calculator.py",
    "src/babylon/economics/melt/imperial_rent.py",
    "src/babylon/economics/melt/class_position.py",
    "src/babylon/economics/melt/basket_visibility.py",
    "src/babylon/economics/melt/wealth_proxy.py",
    "src/babylon/economics/throughput/calculator.py",
    "src/babylon/economics/throughput/supply_chain.py",
    "src/babylon/economics/throughput/naics_depth.py",
    "src/babylon/economics/throughput/analysis.py",
    "src/babylon/economics/gamma/gamma_iii.py",
    "src/babylon/economics/gamma/gamma_basket.py",
    "src/babylon/economics/gamma/gamma_import.py",
    "src/babylon/economics/gamma/shadow_subsidy.py",
    "src/babylon/economics/gamma/validation.py",
    "src/babylon/economics/dynamics/accumulation.py",
    "src/babylon/economics/dynamics/dispossession.py",
    "src/babylon/economics/dynamics/savings_schedule.py",
    "src/babylon/economics/dynamics/crisis.py",
    "src/babylon/economics/dynamics/validation.py",
    "src/babylon/economics/dynamics/transition_engine.py",
    "src/babylon/economics/crisis/bifurcation.py",
    "src/babylon/economics/crisis/wage_compression.py",
    "src/babylon/economics/tick/system.py",
    "src/babylon/economics/tick/crisis_detector.py",
    "src/babylon/economics/tick/derived_rates.py",
    "src/babylon/economics/tick/precarity.py",
    "src/babylon/economics/tick/smoothing.py",
    "src/babylon/economics/tick/graph_bridge.py",
    "src/babylon/economics/tick/initializer.py",
    "src/babylon/economics/temporal/transitions.py",
    "src/babylon/economics/temporal/anomaly.py",
    "src/babylon/economics/temporal/smoothing.py",
    "src/babylon/economics/temporal/signals.py",
    "src/babylon/economics/calibration/thresholds.py",
]
tests_dir = [
    "tests/unit/formulas/",
    "tests/unit/engine/",
    "tests/unit/economics/",
]
also_copy = [
    "src/",
    "tools/",
]
debug = false

[tool.rstcheck]
report_level = "WARNING"
ignore_roles = [
    "hope",
    "hopedim",
]
ignore_directives = [
    "mermaid",
    "todo",
    "automodule",
    "autoclass",
    "autofunction",
    "autosummary",
    "toctree",
    "only",
]
ignore_substitutions = [
    "release",
    "version",
]

[tool.hypothesis]
deadline = 500
max_examples = 100

[tool.babylon.cross_scale]
# Spec 062 cross-scale integration tunables (FR-029 / FR-029a / FR-046 / FR-004a).
# These mirror the EconomyDefines fields and document the default values for
# YAML/CLI overrides. See specs/062-cross-scale-integration/data-model.md §2.5.
alpha_annual = 0.01            # FR-029: annual capital-equalization rate
epsilon_conservation = 1e-10   # FR-046: conservation-residual tolerance
scenario_length_years = 15     # FR-004a: immutable scenario length

[tool.babylon.logging]
default_level = "INFO"
console_level = "INFO"
file_level = "DEBUG"

[tool.babylon.logging.modules]
"babylon.engine" = "INFO"
"babylon.engine.systems" = "INFO"
"babylon.engine.simulation" = "INFO"
"babylon.rag" = "INFO"
"babylon.rag.retrieval" = "INFO"
"babylon.rag.embeddings" = "INFO"
"babylon.rag.chunker" = "INFO"
httpx = "WARNING"
httpcore = "WARNING"
urllib3 = "WARNING"
asyncio = "WARNING"

[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
extraPaths = ["."]
