[workspace]
members = [
    "crates/hypergraph-rs",
    "crates/hypergraph-rs-python",
    "crates/hypergraph-rs-wasm",
    "crates/hypergraph-rs-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
# Honest MSRV: the resolved dependency tree (rustworkx-core 0.18,
# indexmap 2.14, hashbrown 0.17) declares 1.85 — verified via
# `cargo metadata`. CI tests this floor (mise run rust:msrv).
rust-version = "1.85"
license = "BSD-3-Clause"
authors = ["Babylon Project"]
repository = "https://github.com/percy-raskova/babylon"

[workspace.dependencies]
rustworkx-core = "0.18"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
rand_pcg = "0.3"
rayon = "1"
