[package]
name = "hypergraph-rs-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI for hypergraph-rs"

# The binary is `hypergraph` (not `hypergraph-rs`): a bin named like the lib
# crate collides in `cargo doc` output (cargo bug #6313) and trips the
# rustdoc -D warnings gate.
[[bin]]
name = "hypergraph"
path = "src/main.rs"

[dependencies]
hypergraph-rs = { path = "../hypergraph-rs" }
clap = { version = "4", features = ["derive"] }
