[package]
name = "hypergraph-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Rust port of XGI — hypergraph library built on rustworkx-core"

[dependencies]
rustworkx-core.workspace = true
petgraph.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
